leds: add support for Gen 2 LEDs
