# openapi.yaml
@@ -78,6 +78,55 @@ paths:
         '400':
           description: The value could not be parsed into a boolean
 
+  /v1/tac/led/{led}/pattern:
+    parameters:
+      - name: led
+        description: The name of the respective LED
+        required: true
+        schema:
+          type: string
+          enum:
+            - out_0
+            - out_1
+            - dut_pwr
+            - eth_dut
+            - eth_lab
+            - status
+
+    get:
+      summary: Get the current blink pattern of the LED
+      tags: [User Interface]
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/BlinkPattern'
+
+  /v1/tac/led/{led}/color:
+    parameters:
+      - name: led
+        description: The name of the respective LED
+        required: true
+        schema:
+          type: string
+          enum:
+            - status
+
+    get:
+      summary: Get the current RGB color of the LED
+      tags: [User Interface]
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: number
+                minItems: 3
+                maxItems: 3
+
   /v1/dut/powered:
     get:
       summary: Get the current Power Switch state
@@ -671,6 +720,26 @@ components:
       oneOf:
         - required: [Press]
         - required: [Release]
+
+    BlinkPattern:
+      type: object
+      properties:
+        repetitions:
+          type: integer
+        steps:
+          type: array
+          items:
+            type: array
+            oneOf:
+              - type: number
+              - type: object
+                properties:
+                  secs:
+                    type: integer
+                  nanos:
+                    type: integer
+            minItems: 2
+            maxItems: 2
 
     DutPwrStatus:
       type: string
